mudando o nome de uma coluna nas migrations e limpando o banco

--- a/test/fixtures/patients.yml
+++ b/test/fixtures/patients.yml
@@ -2,12 +2,12 @@
 
 one:
   fullname: MyString
-  date_of_birth: 2023-06-13
+  birthdate: 2023-06-13
   cpf: MyString
   email: MyString
 
 two:
   fullname: MyString
-  date_of_birth: 2023-06-13
+  birthdate: 2023-06-13
   cpf: MyString
   email: MyString
