--- a/test/fixtures/addresses.yml
+++ b/test/fixtures/addresses.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  cep: MyString
-  city: MyString
-  street: MyString
+  patient: one
+  cep: 55360000
+  city: Garanhuns
+  street: Rua 2
   next: MyString
 
 two:
-  cep: MyString
-  city: MyString
+  patient: two
+  cep: 55360000
+  city: Garanhuns
   street: MyString
   next: MyString
