--- a/test/fixtures/patients.yml
+++ b/test/fixtures/patients.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  fullname: MyString
+  fullname: Monkey D. Luffy
   birthdate: 2023-06-13
-  cpf: MyString
-  email: MyString
+  cpf: 99999999999
+  email: luffy@gmail.com
 
 two:
-  fullname: MyString
+  fullname: Nico Nico Robin
   birthdate: 2023-06-13
-  cpf: MyString
-  email: MyString
+  cpf: 88888888888
+  email: robin@gmail.com
